# ctc

./: .gitignore  ctc.c  ctc.g4  ctc.h  key.inc  makefile  meson.build  wrapper.ini
com/cthulhu/: Lexer.java  Main.java  Token.java
com/cthulhu/tokens/: EOFToken.java  IdentToken.java  IntToken.java  InvalidToken.java  Key.java  KeyToken.java  StringToken.java
com/tests/: Lex1.java
ctc/: ctc.c  ctc.h  ctc_impl.h  keys.inc  test.c
ctc/printf/: printf.c  printf.h
ctc/tests/: interp.c  test.c  validate.c
ctc/tools/: ast.c  compile.c  interp.c
cthulhu/: cthulhu.c  cthulhu.cpp  cthulhu.h  cthulhu.hpp  keys.h  keys.inc  printf.c
cthulhu/tools/: compile.c  interp.c  test.c
docs/: alias.md  attribs.md  builtin.md  cthulhu.g4  cthulhu.md  decorator.md  expressions.md  grammar.md  imports.md  terms.md  types.md  x86.md
lang/: cthulhu.g4
old/: README.md  cthulhu.cpp  cthulhu.h  makefile  meson.build
old/cthulhu/: cthulhu.c  cthulhu.h  cthulhu.hpp  keys.h  keys.inc
old/cthulhu/printf/: printf.c  printf.h
old/docs/: cthulhu.g4  imports.md
old/temp/: cthulhu.h
old/tests/: compile.c  expr.ct  main.ct  perhaps.ct
old2/: cthulhu.h
old3/: cthulhu.h
tests/: compile.c  expr.ct  loops.ct  main.ct  meson.build  perhaps.ct  stream.cpp  types.ct
tools/: ast.c  cti.c  temp.c  test.cpp
